# fra503_allgaits_inspired

./: .gitignore  README.md  SETUP.md  baseline_fixed_trot.csv  ours_s0.csv  ours_switching.csv  play_joint_log.csv  play_slip_log.csv  pyproject.toml  pytest.ini  sweep_h038.csv  sweep_h044.csv
allgaits/: __init__.py
allgaits/cpg/: __init__.py  coupling.py  hopf.py  pattern.py
allgaits/envs/: __init__.py  allgaits_env.py  allgaits_env_cfg.py  b1_cfg.py
allgaits/kinematics/: __init__.py  b1.py
allgaits/tasks/: __init__.py
allgaits/training/: __init__.py  ppo_cfg.py
scripts/: play.py  plot_jerk.py  plot_paper_metrics.py  train.py
tests/: test_coupling.py  test_cpg_hopf.py  test_env.py  test_kinematics.py  test_pattern.py
