[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "allgaits"
version = "0.0.1"
description = "AllGaits replication on Unitree B1 in Isaac Lab"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["allgaits*"]
exclude = ["tests*", "scripts*", "configs*"]
